tests/compile_fail/boxed_local.stderr
error[E0597]: `scope2` does not live long enough
  --> tests/compile_fail/boxed_local.rs:12:44
   |
9  |   let _boxed_local = {
   |       ------------ borrow later stored here
10 |     let scope2 = pin!(v8::HandleScope::new(&mut scope1));
11 |     let mut scope2 = scope2.init();
   |         ---------- binding `scope2` declared here
12 |     let scope3 = pin!(v8::HandleScope::new(&mut scope2));
   |                                            ^^^^^^^^^^^ borrowed value does not live long enough
...
15 |   };
   |   - `scope2` dropped here while still borrowed

error[E0716]: temporary value dropped while borrowed
  --> tests/compile_fail/boxed_local.rs:12:18
   |
9  |   let _boxed_local = {
   |       ------------ borrow later stored here
...
12 |     let scope3 = pin!(v8::HandleScope::new(&mut scope2));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
15 |   };
   |   - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
  --> tests/compile_fail/boxed_local.rs:10:18
   |
9  |   let _boxed_local = {
   |       ------------ borrow later stored here
10 |     let scope2 = pin!(v8::HandleScope::new(&mut scope1));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
15 |   };
   |   - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)
